name:                mqtt-hs
version:             1.0.3
synopsis:            A MQTT client library.
homepage:            http://github.com/k00mi/mqtt-hs
license:             GPL-3
license-file:        LICENSE
author:              Lukas Braun <koomi+mqtt@hackerspace-bamberg.de>
maintainer:          Lukas Braun <koomi+mqtt@hackerspace-bamberg.de>
copyright:           (c) 2014-2016 Lukas Braun
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           experimental
description:
    A library to communicate with MQTT brokers.

    See the 'Network.MQTT' module for documentation and the project repository
    for some <https://github.com/k00mi/mqtt-hs/blob/master/examples examples>.
tested-with:         GHC==8.6.1, GHC==8.4.1, GHC==8.2.2, GHC==8.0.2


library
  exposed-modules:     Network.MQTT, Network.MQTT.Parser, Network.MQTT.Encoding,
                       Network.MQTT.Types, Network.MQTT.Internal
  build-depends:       base,
                       async,
                       mtl,
                       transformers,
                       attoparsec,
                       bytestring,
                       text,
                       network,
                       singletons,
                       stm,
                       monad-loops
  default-language:    Haskell2010
  ghc-options: -Wall
               -fno-warn-name-shadowing


source-repository head
  type:     git
  location: git://github.com/k00mi/mqtt-hs.git
